# some_ai

./: LICENSE
langchain/: .gitignore  .tool-versions  README.md  poetry.toml  pyproject.toml
langchain/src/langchain/: sarcastic_chatbot.ipynb
